# cedeno

./: .gitignore  .gitmodules  CMakeLists.txt  backtesting.sln  bitbucket-pipelines.yml  script.sh
.github/workflows/: ci.yml  main.yml
backtesting/: CMakeLists.txt  adaptor.cpp  adaptor.hpp  arg_parser_extension.cpp  argument.hpp  arguments_parser.cpp  arguments_parser.hpp  backtesting.cpp  backtesting.vcxproj  backtesting.vcxproj.filters  candlestick_data.cpp  common.cpp  common.hpp  container.hpp  database_connector.cpp  database_connector.hpp  database_types.hpp  depth_data.cpp  depth_data.hpp  global_data.cpp  global_data.hpp  main.cpp  matching_engine.cpp  matching_engine.hpp  order_book.cpp  order_book.hpp  order_book_base.hpp  py_wrapper.cpp  user_data.cpp  user_data.hpp
backtesting/doc/: Doxyfile
backtesting/include/: aggregate_trade.hpp  arguments_parser.hpp  bookticker.hpp  callbacks.hpp  candlestick_data.hpp  common.hpp  container.hpp  data_streamer.hpp  depth_data.hpp  entry_point.hpp  enumerations.hpp  futures_data.hpp  futures_order_book.hpp  global_data.hpp  indicator_data.hpp  log_info.hpp  matching_engine.hpp  order_book_base.hpp  py_wrapper.hpp  remote_file_downloader.hpp  signals.hpp  spot_order_book.hpp  symbol.hpp  tick.hpp  trades_data.hpp  user_data.hpp
backtesting/include/indicators/: cllbck_iterator.hpp  config.hpp  indc.hpp  indc_data.hpp  indc_mngr.hpp  indicators.hpp  source_data.hpp  testing.hpp
backtesting/include/indicators/bwfs/: avrg_in.hpp  avrg_out.hpp  bwfs_hndlr.hpp  qty_in.hpp  qty_in_out.hpp  qty_out.hpp  ticks_in.hpp  ticks_in_out.hpp  ticks_out.hpp
backtesting/include/indicators/helpers/: cllbck_iterator.hpp  indcs_utils.hpp
backtesting/include/indicators/indicators/: atr.hpp  ema.hpp  indicator.hpp  macd.hpp  sar.hpp  sma.hpp  wma.hpp
backtesting/include/indicators/indicators/bwfs/: avrg_in.hpp  avrg_out.hpp  buy_vs_sell.hpp  bwfs.hpp  bwfs_hndlr.hpp  qty_in.hpp  qty_in_out.hpp  qty_out.hpp  ticks_in.hpp  ticks_in_out.hpp  ticks_out.hpp
backtesting/include/indicators/manager/: indc_config.hpp  indc_mnger.hpp
backtesting/indicators/: exe  main.cpp  questions  testing.py  todo
backtesting/indicators/Inc/: indi_data.hpp  indicator_data.hpp  indicator_manager.hpp  indicators.hpp  ticks_in.hpp  ticks_out.hpp
backtesting/indicators/Inc/BWFS/: avrg_in.hpp  avrg_out.hpp  bwfs_hndlr.hpp  qty_in.hpp  qty_in_out.hpp  qty_out.hpp  ticks_in.hpp  ticks_in_out.hpp  ticks_out.hpp
backtesting/indicators/Src/: indicators.cpp  main.cpp  ticks_in.cpp  ticks_out.cpp
backtesting/indicators/Src/BWFS/: avrg_in.cpp  avrg_out.cpp  bwfs_hndlr.cpp  qty_in.cpp  qty_in_out.cpp  qty_out.cpp  ticks_in.cpp  ticks_in_out.cpp  ticks_out.cpp
backtesting/indicators/Src/creed_and_bear/: avrg_in.cpp  avrg_out.cpp  qty_in.cpp  qty_in_out.cpp  qty_out.cpp  ticks_in.cpp  ticks_in_out.cpp  ticks_out.cpp
backtesting/scripts/: run.py
backtesting/scripts/config/: command.sh  database.ini  development.py
backtesting/src/: adaptor.cpp  aggregate_trade.cpp  arg_parser_extension.cpp  arguments_parser.cpp  bookticker.cpp  callbacks.cpp  candlestick_data.cpp  common.cpp  database_connector.cpp  depth_data.cpp  entry_point.cpp  entry_point_extension.cpp  futures_order_book.cpp  global_data.cpp  matching_engine.cpp  order_book_base.cpp  py_wrapper.cpp  remote_file_downloader.cpp  signals.cpp  spot_order_book.cpp  tick.cpp  trades_data.cpp  user_data.cpp
backtesting/src/indicators/: config.cpp  exe  indc.cpp  indc_config.cpp  indicators.cpp  main.cpp  questions
backtesting/src/indicators/bwfs/: avrg_in.cpp  avrg_out.cpp  bwfs_hndlr.cpp  qty_in.cpp  qty_in_out.cpp  qty_out.cpp  ticks_in.cpp  ticks_in_out.cpp  ticks_out.cpp
backtesting/src/indicators/helpers/: indcs_utils.cpp
backtesting/src/indicators/indc_testing/: indc_test.cpp
backtesting/src/indicators/indicators/: atr.cpp  ema.cpp  indicator.cpp  macd.cpp  sar.cpp  sma.cpp  wma.cpp
backtesting/src/indicators/indicators/bwfs/: avrg_in.cpp  avrg_out.cpp  buy_vs_sell.cpp  bwfs.cpp  bwfs_hndlr.cpp  qty_in.cpp  qty_in_out.cpp  qty_out.cpp  ticks_in.cpp  ticks_in_out.cpp  ticks_out.cpp
backtesting/src/indicators/manager/: indc_config.cpp  indc_mnger.cpp
cedeno/: cedeno.cpp  cedeno.vcxproj  cedeno.vcxproj.filters  main.cpp
cedeno/base/: account.cc  account.h  base.h  base.pb.cc  base.pb.h  history.cc  history.h  side_input.cc  side_input.h  trader.h
cedeno/eval/: eval.cc  eval.h  eval.pb.cc  eval.pb.h
cedeno/indicators/: exponential_moving_average.cc  exponential_moving_average.h  last_n_ohlc_ticks.cc  last_n_ohlc_ticks.h  moving_average_convergence_divergence.cc  moving_average_convergence_divergence.h  relative_strength_index.cc  relative_strength_index.h  simple_moving_average.cc  simple_moving_average.h  stochastic_oscillator.cc  stochastic_oscillator.h  util.cc  util.h  volatility.cc  volatility.h
cedeno/logging/: csv_logger.cc  (+2 more)
data_extractor/: CMakeLists.txt  candlestick_base.hpp  candlestick_futures_stream.cpp  candlestick_spot_stream.cpp  common.cpp  common.hpp  container.hpp  data_extractor.cpp  data_extractor.hpp  data_extractor.vcxproj  data_extractor.vcxproj.filters  depth_stream.cpp  depth_stream.hpp  trade_stream.cpp  trade_stream.hpp  websocket_stream_base.cpp  websocket_stream_base.hpp
price_gatherer/: candlestick_base.cpp  candlestick_base.hpp  candlestick_futures_stream.cpp  candlestick_futures_stream.hpp  candlestick_spot_stream.cpp  candlestick_spot_stream.hpp  common.cpp  common.hpp  container.hpp  depth_stream.cpp  depth_stream.hpp  main.cpp  price_gatherer.cpp  price_gatherer.vcxproj  price_gatherer.vcxproj.filters  ticker_stream.cpp  ticker_stream.hpp  trade_stream.cpp  trade_stream.hpp  websocket_stream_base.cpp  websocket_stream_base.hpp
test_backtesting/: CMakeLists.txt  test.py  test_backtesting.cpp  test_backtesting.vcxproj  test_backtesting.vcxproj.filters
test_data_extractor/: CMakeLists.txt  test_data_extractor.cpp  test_data_extractor.vcxproj  test_data_extractor.vcxproj.filters
test_indicators/: exe  executable  indc_test.cpp  main.cpp  questions
(+14 files in other folders)
